feat: add missiles-list in missiles.html

--- a/pages/missiles/missiles-style.css
+++ b/pages/missiles/missiles-style.css
@@ -1,78 +1,73 @@
-
-.container {
+.main-container {
 }
+
 .main-inner {
-    display:flex;
-    column-gap:20px;
-   
-   background-color:#3a3a41;
-    border-radius:10px;
+    display: flex;
+    column-gap: 20px;
+    background-color: #3a3a41;
+    border-radius: 10px;
 }
+
 .main-list {
+}
+
+
+/* --MISSILES--LIST-- */
+.missiles-list {
+    padding: 20px;
    
 }
-/*   --ACCORDION--- */
-
-#accordion {
-   background-color:#161515;
-    width:90%;
-    border-radius:10px;
-    padding:20px;
-    display:block;
+.missiles-list-title {
+    margin: 16px 0 0px 16px;
+    text-transform: capitalize;
+    font-size: 24px;
 }
-.ui-accordion-header {
-    font-size:28px;
-    font-style:italic;
-    text-transform:capitalize;
-     padding:10px; 
-      border-radius:10px;
-}
-.ui-accordion-header:hover {
-    background-color:#737d7d7d;
-}
-.ui-accordion-content p {
-   padding:10px; 
-}
-.ui-accordion-content p:hover {
-    cursor:pointer;
-   background-color:#ff45009e;
-    border-radius:10px;
+.missiles-item {
+     display:none;
+    margin:0 0 8px 8px;
+    font-size: 22px;
+    text-transform: capitalize;
+    
 }
 
-    /* --MISSILES--LIST-- */
-    .list {
+.list-item {
+    text-transform: capitalize ;
+    margin: 20px 0 20px 20px;
+}
 
-    }
-    .list-item {
-    margin-bottom: 4px;
-    }
-    .list-item:hover {
-        transform: scale(1.1);
-    }
-    .list-link {
-text-decoration: none;
-font-size: 20px;
-color:white;
-margin-left: 14px;
-    }
+.list-item:hover {
+    transform: scale(1.1) translateX(10px);
+}
 
+.list-link {
+    text-decoration: none;
+    font-size: 20px;
+    color: white;
+    margin: 30px 30px 20px 1px;
+}
 
 /*   ---MAIN-CONTENT--- */
-
 .main-content {
-    background-color:#161515;
-color:white;
-    flex-grow:2;
-   border-radius:10px;
+    background-color: #161515;
+    color: white;
+    flex-grow: 2;
+    border-radius: 10px;
 }
+
 .main-content iframe {
-     width:88%;
-    height:70vh;
-    margin-left:50px;
-    padding:20px;
-   font-size:10px;
-   line-height:20px;
+    width: 88%;
+    height: 70vh;
+    margin-left: 50px;
+    padding: 20px;
+    font-size: 10px;
+    line-height: 20px;
 }
+
 .iframe-text {
-    color:red;
+    color: red;
+}
+
+/*---FOOTER--*/
+.copyright {
+    margin-right: 40px;
 }
