--- a/pages/missiles/missiles-style.css
+++ b/pages/missiles/missiles-style.css
@@ -25,13 +25,14 @@ h1,h2,h3,h4,h5,ul {
   display: block;
 }
 .missiles-list-title {
-  margin: 16px 0 0px 16px;
+  margin: 10px 0 0px 16px;
   text-transform: capitalize;
   font-size: 14px;
   cursor: pointer;
 }
 .missiles-list-title:hover {
-  background-color: #9b8585;
+  transform: scale(1.1);
+ 
  
 }
 .missile-item {
@@ -43,10 +44,7 @@ h1,h2,h3,h4,h5,ul {
 margin-left:40px;
 }
 .missile-item:hover {
- background-color:#9b8585;
-
-border-radius:6px;
-
+ transform: scale(1.1);
 }
 .list-item {
   text-transform: capitalize;
@@ -69,11 +67,11 @@ border-radius:6px;
   background-color: #161515;
   color: white;
   flex-grow: 2;
-  border-radius: 10px;
+  
 }
 
 .main-content iframe {
-  width: 88%;
+  width: 100%;
   height: 70vh;
   margin-left: 50px;
   /* padding: 20px; */
@@ -140,10 +138,21 @@ ul {
   }
  }
 
- @media (max-width: 700px) { 
-  .main-inner {
-    display: flex;
-    flex-direction: column;
+ @media (max-width: 470px) { 
+
+
+  .main-list {
+  width: 80px;
   }
+  .missiles-list-title {
+    font-size: 8px;
+    
+  }
+  .missile-item {
+    font-size: 8px;
+    margin: 10px 0 0 24px;
+  }
+
+
  }
  
